--- a/css/all.css
+++ b/css/all.css
@@ -81,3 +81,15 @@ footer h6{
 #settings button{
     margin-left: 10px;
 }
+#main_a, footer h6 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+table{
+    table-layout: fixed;
+}
+td{
+    vertical-align: middle;
+}
