--- a/css/all.css
+++ b/css/all.css
@@ -93,3 +93,18 @@ table{
 td{
     vertical-align: middle;
 }
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #464646; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #C7C7C7; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #8B8B8B; 
+}
