--- a/css/anime.css
+++ b/css/anime.css
@@ -72,3 +72,12 @@
 .alert{
     display: none;
 }
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    min-width: 1400px;
+}
+#tdiv{
+    overflow-x: auto;
+}
