--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@
     }
 }
 #langalert{
-    margin-top: -30px;
+    margin-top: -15px;
+    overflow: auto;
 }
 *{
     overflow-x: hidden;
@@ -62,3 +63,4 @@ i{
     overflow-y: hidden;
 
 }
+
