--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,7 @@
 main{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    margin-top: 10vh;
 }
 #viz_des{
     display: none;
