--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
-#konbg{
+#yui_hatter{
     background-image: url(../media/yui-btn.png);
-    background-repeat: no-repeat;
     background-position: center;
+    background-size: 100%;
 }
-.std_redir_btn{
+/* .std_redir_btn{
     height: 64px;
     width: 64px;
     vertical-align: top;
     margin-left: 20px;
     border: 1px solid red;
     border-radius: 10px;
-}
+} */
 @keyframes btn_hover {
     from {background-color: white;}
     to {background-color: #c4c4c4;}
 }
-.std_redir_btn:hover{
+/* .std_redir_btn:hover{
     animation: btn_hover 0.5s forwards;
-}
+} */
 #nothing-div{
     display: flex;
     justify-content: center;
@@ -31,11 +31,11 @@
 #legkisebb{
     display: none;
 }
-@media only screen and (max-width: 370px) {
+/* @media only screen and (max-width: 370px) {
     .std_redir_btn {
         margin-left: 2px;
     }
-}
+} */
 @media only screen and (max-width: 800px) {
     #index_for_mobile{
         display: block;
@@ -54,13 +54,4 @@
 }
 #langalert{
     margin-top: -15px;
-    overflow: auto;
 }
-*{
-    overflow-x: hidden;
-}
-i{
-    overflow-y: hidden;
-
-}
-
