--- a/css/all.css
+++ b/css/all.css
@@ -157,8 +157,13 @@ a:hover, .fa-language:hover, #n_main:hover, .fa-bars:hover{
 }
 #menupontok{
     background-color: #464646;
+    left: 0;
+    width: 100%;
+    top: 96px;
     height: 100px;
     display: none;
+    z-index: 1000;
+    position: absolute;
 }
 #menupontok a{
     margin-top: -8px;
