--- a/osszefoglalok/tz-osszefoglalok.css
+++ b/osszefoglalok/tz-osszefoglalok.css
@@ -1,6 +1,8 @@
 .column{
-    width: 50%;
+    width: 48%;
     background-color: #464646;
+    border-radius: 10px;
+    margin-right: 10px;
 }
 #fcm{
     border-right: 1px solid red;
@@ -9,9 +11,9 @@
     margin-top: 10px;
 }
 #tantargyak{
-    width: 100%;
-    margin: auto;
-    position: absolute;
+    width: 80vw;
+    margin: 0 auto;
+    margin-top: 200px;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%); 
@@ -34,7 +36,8 @@ iframe{
 }
 section h4{
     background-color: #464646;
-    width: 100vw;
+    width: 80vw;
+    border-radius: 10px;
 }
 section i, #fajlkezelo h3 i{
     float: right;
@@ -44,12 +47,18 @@ section i, #fajlkezelo h3 i{
     position: relative;
     display: inline-block;
 }
+.dropdown h4{
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
 .dropdown-content {
     display: none;
     background-color: #464646;
     z-index: 1;
-    margin-top: -10px;
     padding-right: 25px;
+    width: 80vw;
+    border-radius: 10px;
 }
 button a{
     text-decoration: none;
@@ -68,3 +77,14 @@ button{
 main h1{
     margin-top: 10vh;
 }
+#bmc-iframe{
+    min-height: 0 !important;
+    height: 600px !important;
+}
+#bmc-wbtn{
+    border: 1px solid var(--beallitott_szin) !important;
+}
+*{
+    -ms-overflow-style: none;scrollbar-width: none;
+}
+html::webkit-scrollbar, body::webkit-scrollbar{display:none;}
