--- a/css/all.css
+++ b/css/all.css
@@ -228,10 +228,19 @@ main h1{
         margin-top: 10px;
     }
 }
-@media only screen and (max-width: 620px) {
+@media only screen and (max-width: 1030px) {
     #footer_nav{
-        padding-left: 40% !important;
-        padding-right: 40% !important;
+        padding-left: 46% !important;
+        padding-right: 46% !important;
+    }
+}
+@media only screen and (max-width: 530px) {
+    #footer_nav{
+        padding-left: 44% !important;
+        padding-right: 44% !important;
+    }
+    #footer h6{
+        padding: 0 !important;
     }
 }
 br{
