--- a/osszefoglalok/tz-osszefoglalok.css
+++ b/osszefoglalok/tz-osszefoglalok.css
@@ -1,5 +1,5 @@
 .column{
-    width: 46%;
+    width: 44%;
     background-color: #464646;
     border-radius: 10px;
     margin-right: 10px;
@@ -18,13 +18,13 @@
 .column h4{
     margin-top: 10px;
 }
-#tantargyak{
+#tantargyak {
     width: 80vw;
     margin: 0 auto;
-    margin-top: 200px;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%); 
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
 #fajlkezelo{
     position: absolute;
@@ -68,6 +68,11 @@ section i, #fajlkezelo h3 i{
     width: 80vw;
     border-radius: 10px;
 }
+.dropdown-content {
+    max-height: 250px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
 button a{
     text-decoration: none;
     animation: none !important;
@@ -81,14 +86,4 @@ button{
 }
 .column p{
     margin-top: 20px;
-}
-main h1{
-    margin-top: 10vh;
-}
-*{
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-html::webkit-scrollbar, body::webkit-scrollbar{
-    display:none;
 }
