--- a/osszefoglalok/tz-osszefoglalok.css
+++ b/osszefoglalok/tz-osszefoglalok.css
@@ -4,12 +4,12 @@
     border-radius: 10px;
     margin-right: 10px;
 }
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 380px) {
     #tantargyak div h4{
         display: none;
     }
     .column{
-        width: 44%;
+        height: 70px !important;
     }
 }
 #fcm{
@@ -17,6 +17,7 @@
 }
 .column h4{
     margin-top: 10px;
+    padding: 0;
 }
 #tantargyak {
     width: 80vw;
@@ -24,7 +25,9 @@
     margin-top: 100px;
     display: flex;
     justify-content: center;
-    gap: 10px;
+}
+#tantargyak div{
+    height: 100px;
 }
 #fajlkezelo{
     position: absolute;
