--- a/osszefoglalok/tz-osszefoglalok.css
+++ b/osszefoglalok/tz-osszefoglalok.css
@@ -1,10 +1,18 @@
 .column{
     width: 44%;
     background-color: #464646;
-    border-radius: 10px;
     margin-right: 10px;
+    border-radius: 10px;
 }
-@media only screen and (max-width: 380px) {
+#sor2{
+    background: repeating-linear-gradient(45deg,#464646,#464646 10px,#ffcc00 10px,#ffcc00 20px);
+}
+#sor2 h4, #sor2 i{
+    color: tomato !important;
+    background-color: #464646;
+    border-radius: 10px;
+}
+@media only screen and (max-width: 430px) {
     #tantargyak div h4{
         display: none;
     }
@@ -25,6 +33,17 @@
     margin-top: 100px;
     display: flex;
     justify-content: center;
+}
+@media (max-width: 768px) {
+    #tantargyak {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .column{
+        margin-top: 10px;
+        margin-right: 0;
+    }
 }
 #tantargyak div{
     height: 100px;
@@ -89,4 +108,7 @@ button{
 }
 .column p{
     margin-top: 20px;
+}
+#sor2{
+    margin-top: 10px;
 }
